# ai-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
config/: models.yaml  settings.yaml
config/prompts/: document.yaml  notification.yaml  qa.yaml  router.yaml
src/: main.py
src/agent/: __init__.py  graph.py  prompts.py  state.py
src/agent/nodes/: __init__.py  document.py  generation.py  knowledge_qa.py  notification.py  router.py
src/interfaces/: __init__.py  cli.py  web.py
src/interfaces/bot/: __init__.py  base.py  dingtalk.py  feishu.py  wecom.py
src/knowledge/: __init__.py  chunker.py  embedding.py  pipeline.py  vector_store.py
src/mcp/: __init__.py  server.py
src/mcp/tools/: __init__.py  document_parser.py  file_manager.py  knowledge_base.py  notification.py  web_search.py
src/models/: __init__.py  base.py  claude.py  ollama.py  openai.py
src/utils/: __init__.py  config.py  file_utils.py  logger.py
