[project]
name = "ai-office-assistant"
version = "0.1.0"
description = "AI Agent 智能办公助手 - 统一知识问答、文档处理、消息通知"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Agent 框架
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",

    # LLM
    "anthropic>=0.40.0",
    "openai>=1.60.0",
    "ollama>=0.4.0",

    # MCP
    "mcp>=1.0.0",

    # 向量数据库
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # 文档处理
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",

    # Web UI
    "streamlit>=1.40.0",

    # 工具
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.28.0",
    "duckduckgo-search>=6.0.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
feishu = ["lark-oapi>=1.4.0"]
ocr = ["paddleocr>=2.9.0", "paddlepaddle>=3.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.12.0",
]

[project.scripts]
ai-assistant = "src.main:cli"

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
